tests/conformance/typecheck/invalid/await_in_non_async_lambda.ks
// EXPECT: async contexts
async fun getTask(): Task<Int> = 1

val badTop = (x: Int) => await getTask()

async fun run(): Task<Int> = {
  val badNested = (x: Int) => await getTask()
  0
}